<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="8dp"
    tools:context=".MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title"
        android:textSize="32sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        style="?attr/materialCardViewElevatedStyle"
        app:layout_constraintTop_toBottomOf="@+id/top"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/distance"
                app:endIconMode="clear_text"
                app:helperTextEnabled="true"
                app:helperText="Total de quilômetros"
                app:errorEnabled="true"
                android:layout_marginVertical="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                app:endIconMode="clear_text"
                app:helperTextEnabled="true"
                app:helperText="Preço por litro de combustível"
                android:id="@+id/price"
                app:errorEnabled="true"
                android:layout_marginVertical="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/consumption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/consume"
                app:endIconMode="clear_text"
                app:helperTextEnabled="true"
                app:helperText="Autonomia do veículo em Km por litro"
                app:errorEnabled="true"
                android:layout_marginVertical="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:text="@string/result"
                    android:textSize="24sp"
                    tools:ignore="RelativeOverlap" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_result"
                    android:layout_marginBottom="8dp"
                    android:textSize="24sp"
                    android:textColor="@color/md_theme_secondary"
                    tools:ignore="RelativeOverlap" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@id/form"
        app:layout_constraintEnd_toEndOf="@id/form"
        android:textSize="24sp"
        android:layout_marginVertical="16dp"
        android:paddingHorizontal="32dp"
        android:paddingVertical="8dp"/>

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>